tests/paczka1/small_fuzzy/22563597.err
Error in line 2: DA63 A604 67,62
Error in line 3: l9QQ3oa4 S419 94,2
Error in line 4: l9QQ3oa4 A604 21,5
Error in line 6: eal S164 34,0
